package architectoryHW4.onlineTicket;

import java.util.Date;

/**
 * Попытка забронировать билет.
 * @return true, если бронирование успешно, false в противном случае.
 * @pre User должен быть авторизован и выбран маршрут.
 * @pre Билеты на выбранный маршрут и время должны быть доступны.
 * @pre У пользователя должно быть достаточно средств для бронирования.
 * @post Билет забронирован.
 */

// Класс, представляющий пользователя системы.
class User implements UserActions {

    /**
     * Вход в систему для приобретения билетов
     * @param username имя пользователя
     * @param password пароль пользователя для входа в систему
     * @pre верно введён username
     * @pre верно введён password
     * @post Вход в систему
     * @return true, в случае правильно введённых username и password, false в противном случае.
     * <P>
     * Этот метод позволяет войти в систему для осуществления покупок билетов.
     * Если все предусловия выполняются, вход в систему будет осуществлён успешно, и метод вернет true.
     * В противном случае, если хотя бы одно из предусловий не выполняется, вход в систему не будет произведён, и метод
     * вернет false.
     */
    @Override
    public boolean authorize(String username, String password) {
        // Реализация метода
        return false;
    }

    /**
     * Выбор маршрута
     * @param routeId номер маршрута
     * @param time время отправления со станции
     * @pre верно введён routeId
     * @pre верно введено time
     * @return true, в случае правильно введённых routeId и time, false в противном случае.
     * <P>
     * Этот метод позволяет выбрать маршрут и время отправления.
     * Если все предусловия будут выполнены, маршрут будет выбран успешно, и метод вернет true.
     * В противном случае, если хотя бы одно из предусловий не выполняется, выбор маршрута не будет произведён, и метод
     * вернет false.
     */
    @Override
    public boolean selectRoute(String routeId, Date time) {
        // Реализация метода
        return false;
    }

    /**
     * Проверка наличия билетов по выбранному маршруту
     * @pre верно введён routeId
     * @pre верно введено time
     * @return true, в случае правильно введённых routeId и time, а также наличию свободных мест по выбранному маршруту,
     *  false в противном случае.
     * <P>
     * Этот метод позволяет определить наличие свободных мест по выбранному маршруту
     * Если все предусловия будут выполнены, а также по выбранному маршруту будут свободные места, метод вернет true.
     * В противном случае, если свободные места будут отсутствовать, метод вернет false.
     */
    @Override
    public boolean checkTicketAvailability() {
        // Реализация метода
        return false;
    }

    /**
     * Проверка наличия денежных средств на счёте пользователя
     * @return true, в случае наличия денежных средств на счёте пользователя достаточных для оплаты зарезервированного
     * билета, false в противном случае.
     * @pre введён routeId, стоимость билета зависит от выбранного маршрута
     * @pre У пользователя должно быть достаточно средств на счёте для оплаты билета по выбранному маршруту
     * @post доступ к возможности зарезервировать билет.
     * <P>
     *     Этот метод позволяет определить, есть ли денежные средства для приобретения билета
     *     Если все предусловия выполняются, метод вернёт true.
     *     В противном случае, если хотя бы одно из предусловий не выполняется, метод вернет false.
     */
    @Override
    public boolean checkFunds() {
        // Реализация метода
        return false;
    }

    /**
     * Попытка забронировать билет.
     * @return true, если бронирование успешно, false в противном случае.
     * @pre User должен быть авторизован и выбран маршрут.
     * @pre Билеты на выбранный маршрут и время должны быть доступны.
     * @pre У пользователя должно быть достаточно средств для бронирования.
     * @post Билет забронирован.
     *<P>
     * Этот метод позволяет пользователю попытаться забронировать билет на выбранный маршрут и время.
     * Для успешной бронировки необходимо выполнение следующих условий:
     * - Пользователь должен быть предварительно авторизован в системе (authorize).
     * - Пользователь должен выбрать конкретный маршрут и время (selectRoute).
     * - Должны быть доступны билеты на выбранный маршрут и время (checkTicketAvailability).
     * - У пользователя должно быть достаточно средств для бронирования (checkFunds).
     *<P>
     * Если все предусловия выполняются, билет будет успешно забронирован, и метод вернет true.
     * В противном случае, если хотя бы одно из предусловий не выполняется, бронирование не будет произведено, и метод вернет false.
     */
    public boolean reserveTicket() {
        // ... реализация метода ...
        // Проверка предусловий
        if (!isAuthorized()) {
            return false; // Пользователь не авторизован
        }

        if (!isRouteSelected()) {
            return false; // Маршрут не выбран
        }

        if (!checkTicketAvailability()) {
            return false; // Билеты не доступны
        }

        if (!checkFunds()) {
            return false; // Недостаточно средств
        }

        // Реализация бронирования билета
        if (performReservation()) {
            // Постусловие: Билет успешно забронирован
            return true;
        } else {
            return false; // Ошибка при бронировании
        }
    }

    private boolean performReservation() {
        return false;
    }

    private boolean isRouteSelected() {
        return false;
    }

    private boolean isAuthorized() {
        return false;
    }

    /**
     * Попытка списания средств
     * @return true, в случае наличия денежных средств на счёте пользователя достаточных для оплаты зарезервированного
     * билета, происходит списание денежных средств, false в противном случае.
     * @pre У пользователя должно быть достаточно средств на счёте для оплаты билета
     * @post Списание средств
     * <P>
     *     Этот метод позволяет списать денежные средства за приобретённый билет
     *     Если все предусловия выполняются, списание средств будет успешным, и метод вернёт true.
     *     В противном случае, если хотя бы одно из предусловий не выполняется, списание не будет произведено, и метод
     *     вернет false.
     */
    public boolean deductFunds() {
        // Реализация метода
        return false;
    }

    /**
     * Подтверждение покупки билета
     * @return true, в случае списания средств со счёта пользователя происходит подтверждение о списании денежных средств
     * и приобретении билета, false в противном случае.
     * @pre Списание средств прошло успешно.
     * @post Подтверждение о приобретении билета(ов)
     * <P>
     *     Этот метод позволяет подтвердить списание денежных средств за приобретённый билет, а так же приобретение
     *     билета(ов)
     *<P>
     *     Если все предусловия выполняются, подтверждение о покупке будет успешным, и метод вернёт true.
     *     В противном случае, если хотя бы одно из предусловий не выполняется, подтверждение о покупке не будет
     *     произведено, и метод вернет false.
     */
    public boolean confirmPurchase() {
        // Реализация метода
        return false;
    }

    /**
     * Обновление информации о доступности билета
     * В случае списания средств со счёта пользователя обновляется информация о доступных билетах маршруту.
     * @pre Списание средств прошло успешно.
     * @post Обновление информации о доступности билетов
     * <P>
     *     Этот метод позволяет обновить информацию о доступных билетах
     *<P>
     *     Если все предусловия выполняются, обновится информация о доступных билетах.
     *     В противном случае, если хотя бы одно из предусловий не выполняется, обновления информации не произойдёт
     */
    public void updateTicketAvailability() {
        // Реализация метода
    }

    /**
     * Отмена резервирования билета
     * @return true, если отмена резервирования успешно, false в противном случае.
     * @pre У пользователя нет достаточных средств на счёте для оплаты билета
     * @post Отмена резервирования билета(ов)
     * <P>
     *     Этот метод позволяет отменить резервирование билета для дальнейшей доступности другим пользователям
     *     В случае отсутствия средств на счёте пользователя достаточных для приобретения билета или решении
     *     пользователя об отмене покупки билета происходит отмена резервирования билета
     *<P>
     *     Если все предусловия выполняются, отмена резервирования билета будет выполнена
     *     В противном случае, если хотя бы одно из предусловий не выполняется, отмена резервирования билета не будет
     *     произведено, и метод вернет false.
     */
    public boolean cancelReservation() {
        // Реализация метода
        return false;
    }
}
